Fix scrollbar issue on ComboBox, document the unfortunate workaround

--- a/ExtraDry/ExtraDry.Blazor/Components/Standard/ComboBox.razor.scss
+++ b/ExtraDry/ExtraDry.Blazor/Components/Standard/ComboBox.razor.scss
@@ -42,19 +42,26 @@
         }
     }
 
-    ol {
+    > div {
         position: absolute;
+        --chromium-workaround: "Setting background color on <ol> directly masks mouse drag on scrollbar.";
+        background-color: white;
+        // Width Auto w/ left/right of 0 is a less probablematic version of Width: 100%.
+        width: auto;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    ol {
         border: solid 1px silver;
         padding: 0;
-        min-width: 250px;
-        width: 100%;
         line-height: 1.5em;
+        min-width: 250px;
         min-height: calc(4.5em + 14px); // 3 lines * 1.5em line height + 3 lines * 4px padding + 2px for borders
         max-height: calc(13.5em + 38px); // 9 lines * 1.5em line heights + 9 lines * 4px padding + 2px for borders
         overflow: scroll;
         overflow-x: clip;
-        background-color: white;
-        z-index: 1;
 
         li {
             padding: 2px 5px;
